--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-  title = 'Greenscapes - Professional Landscaping & Construction',
-  description = 'Greenscapes delivers expert landscaping design, construction, and maintenance services. Transform your outdoor space with our professional team.'
+  title = 'Greenscapes South Jersey - Landscaping, Hardscaping & Construction',
+  description = 'Greenscapes South Jersey is a property maintenance company based out of Sicklerville, NJ providing expert landscaping services to residential and commercial clients.'
 } = Astro.props;
 ---
 
